# pyrpoc_add_viablity_tracking

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pyrpoc/: main.py
pyrpoc/helpers/: calibration.py  galvo_funcs.py  run_image_2d.py  spectrum_analyzer.py  utils.py  zaber.py
pyrpoc/helpers/prior_stage/: functions.py
pyrpoc/mains/: acquisition.py  display.py  gui.py  mosaic.py  pyqt_rpoc.py  viability_setup.py
pyrpoc/metadata/: spectral_calibration.json
pyrpoc/misc/test_scripts/: calib_galvos.py  plot_mosaic_csv.py  send_spiral.py  stitch.py
pyrpoc/rpoc_scripts/: fully_active.py  interference.py  letters.py  test_masks.py
pyrpoc/viability_scripts/: ROI_info.txt  ROI_mask.tif  ROI_mask.tiff  beads_pretend_to _be_live_ch0.tiff  frame_1.tif  roi_info.txt.txt
pysrs/helpers/: calibration.py  galvo_funcs.py  run_image_2d.py
pysrs/instruments/: galvo_funcs.py  old_galvos.py
pysrs/mains/: acquisition.py  calibration.py  display.py  galvo_funcs.py  gui.py  main.py  pyqt_rpoc.py  rpoc2.py  run_image_2d.py  temp.py  utils.py  widgets.py
pysrs/new_mains/: acquire.py  acquisition.py  calibration.py  display.py  galvo_funcs.py  gui.py  main.py  rpoc2.py  run_image_2d.py  utils.py  widgets.py  zaber.py
pysrs/old_utils/: Digital example.py  monitor.py  nidaq_test.py  rpoc2.py  run.py
pysrs/prior_stage/: make_docs.py  prior_interface.py  prior_stage_movement_test.py
pysrs/runners/: run_image_2d.py
pysrs/simulations/: organelle_crosstalk.py
pysrs/standalones/: calib_galvos.py  fake_spt.py  second_lti.py  send_sine.py
(+4 files in other folders)
