[project]
name = "pyrpoc"
version = "0.2.0"
description = "Real-time Precision Opto-Control Toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

authors = [
  { name = "Ishaan Singh", email = "sing1125@purdue.com" }
]

dependencies = [
  "cellpose", 
  "opencv-python",
  "pillow",
  "matplotlib",
  "pyqt5",       
  "superqt",    
  "nidaqmx",   
  "pyvisa",      
  "zaber_motion"
]

[project.scripts]
pyrpoc = "pyrpoc.main:main"

[tool.setuptools]
packages = ["pyrpoc"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
